# legacy-lands-library

./: .codacy.yml  .gitignore  AGENTS.md  AI_CODE_STANDARDS_ZHCN.md  CLAUDE.md  LICENSE  PROJECT_ANALYSIS_ZHCN.md  README.md  README_ZHCN.md  VERSION_PUBLISH.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: FUNDING.yml  dependabot.yml
experimental/third-party-schedulers/task-scheduler-rust/: CLAUDE.md  Cargo.toml  Makefile  README.md  README_ZHCN.md  build.rs  docker-compose.test.yml  test-config.toml
experimental/third-party-schedulers/task-scheduler-rust/crates/task-common/: Cargo.toml  build.rs
experimental/third-party-schedulers/task-scheduler-rust/crates/task-common/proto/: auth.proto  task_crd.proto  task_scheduler.proto
experimental/third-party-schedulers/task-scheduler-rust/crates/task-common/src/: crd.rs  error.rs  events.rs  lib.rs  models.rs  proto.rs  queue.rs  serialization.rs  tracing.rs
experimental/third-party-schedulers/task-scheduler-rust/crates/task-common/tests/: models_tests.rs
experimental/third-party-schedulers/task-scheduler-rust/crates/task-load-test/: Cargo.toml  build.rs
experimental/third-party-schedulers/task-scheduler-rust/crates/task-load-test/src/: main.rs
experimental/third-party-schedulers/task-scheduler-rust/crates/task-manager/: Cargo.toml  build.rs  config.example.toml
experimental/third-party-schedulers/task-scheduler-rust/crates/task-manager/src/: audit.rs  cancellation.rs  config.rs  dependency_manager.rs  distributed_dependency.rs  lib.rs  main.rs  metrics.rs  test_utils.rs
experimental/third-party-schedulers/task-scheduler-rust/crates/task-operator/: Cargo.toml
experimental/third-party-schedulers/task-scheduler-rust/crates/task-operator/src/: controller.rs  lib.rs  main.rs  reconciler.rs  result_listener.rs
experimental/third-party-schedulers/task-scheduler-rust/crates/task-operator/tests/: operator_tests.rs
experimental/third-party-schedulers/task-scheduler-rust/crates/task-plugins/: Cargo.toml
experimental/third-party-schedulers/task-scheduler-rust/crates/task-scheduler/: Cargo.toml
experimental/third-party-schedulers/task-scheduler-rust/crates/task-storage/: Cargo.toml
experimental/third-party-schedulers/task-scheduler-rust/crates/task-tests/: Cargo.toml
experimental/third-party-schedulers/task-scheduler-rust/crates/task-worker/: Cargo.toml  config.example.toml
experimental/third-party-schedulers/task-scheduler-rust/deploy/: nats-server.conf
experimental/third-party-schedulers/task-scheduler-rust/deploy/docker/: Dockerfile.all-in-one  Dockerfile.manager  Dockerfile.manager.fast  Dockerfile.manager.fixed  Dockerfile.manager.local  Dockerfile.operator  Dockerfile.operator.local  Dockerfile.worker  Dockerfile.worker.fast  Dockerfile.worker.local  docker-compose.grafana.yaml  docker-compose.test.yaml  docker-compose.yaml  manager-config-extreme.toml  manager-config-prod.toml  manager-config.toml  plugin-runtime.Dockerfile  prometheus.yml  worker-config-extreme.toml  worker-config.toml
experimental/third-party-schedulers/task-scheduler-rust/deploy/grafana/: grafana-dashboards-configmap.yaml
experimental/third-party-schedulers/task-scheduler-rust/deploy/helm/: monitoring-values.yaml
experimental/third-party-schedulers/task-scheduler-rust/deploy/prometheus/: prometheus.yml
experimental/third-party-schedulers/task-scheduler-rust/deploy/scripts/: plugin-runner.sh
experimental/third-party-schedulers/task-scheduler-rust/examples/: advanced-scheduler-demo.rs  submit-task-test.rs  test-bincode.rs  wasm-task-example.rs
experimental/third-party-schedulers/task-scheduler-rust/examples/plugin-example/: Cargo.toml
experimental/third-party-schedulers/task-scheduler-rust/examples/plugin_example/: Cargo.toml
experimental/third-party-schedulers/task-scheduler-rust/examples/simple-wasm-plugin/: Cargo.toml  build.sh
experimental/third-party-schedulers/task-scheduler-rust/examples/task-definitions/: simple-tasks.yaml  test-task.yaml  workflow-example.yaml
experimental/third-party-schedulers/task-scheduler-rust/examples/wasm-plugin/: Cargo.toml  build.sh  echo.json
experimental/third-party-schedulers/task-scheduler-rust/proto/: task_scheduler.proto
experimental/third-party-schedulers/task-scheduler-rust/scripts/: common.sh  diagnose-current-state.sh  docker-build-local.sh  full-rebuild-deploy.sh  generate-metrics-data.sh  reset-queue-metrics.sh  restart-workers.sh  run-tests.sh
experimental/third-party-schedulers/task-scheduler-rust/scripts/deploy/: deploy-all.sh  deploy-one-click.sh  deploy-to-k8s.sh  generate-prometheus-config.sh  preload-images.sh
experimental/third-party-schedulers/task-scheduler-rust/scripts/test/: benchmark.sh  complete-test-suite.sh  enable-e2e-tests.sh  run-all-tests.sh  run-e2e-test.sh  run-integration-tests.sh  run-tests-docker.sh  test-complete-ultrathink.sh  test-enterprise.sh  test-guide.sh  test-storage.sh
experimental/third-party-schedulers/task-scheduler-rust/scripts/tools/: submit-test-task.rs
experimental/third-party-schedulers/task-scheduler-rust/scripts/utils/: debug-task.sh  init-database.sh  setup-test-environment.sh  stop-system-services.sh  verify-system.sh
experimental/third-party-schedulers/task-scheduler-rust/src/: lib.rs  logger.rs  main.rs
experimental/third-party-schedulers/task-scheduler-rust/src/error/: mod.rs
experimental/third-party-schedulers/task-scheduler-rust/src/models/: mod.rs  wrappers.rs
experimental/third-party-schedulers/task-scheduler-rust/src/server/: mod.rs  service.rs
experimental/third-party-schedulers/task-scheduler-rust/src/tasks/: builtin.rs  dynamic.rs  mod.rs  registry.rs
experimental/third-party-schedulers/task-scheduler-rust/task-macro/: Cargo.toml
experimental/third-party-schedulers/task-scheduler-rust/task-macro/src/: lib.rs
experimental/third-party-schedulers/task-scheduler-rust/tests/: basic_operations.rs  comprehensive.rs  dynamic_plugins.rs  error_handling.rs  server_test.rs  type_conversion.rs
experimental/third-party-schedulers/task-scheduler-rust/tests/common/: mod.rs  utils.rs
(+183 files in other folders)
