[package]
name = "task-scheduler"
version = "0.1.0"
edition = "2021"

[lib]
name = "task_scheduler"
path = "src/lib.rs"

[[bin]]
name = "task-scheduler"
path = "src/main.rs"

[dependencies]
tonic = { version = "0.13.0", features = [
    "transport",
    "codegen",
    "prost",
    "tls-ring",
    "tls-webpki-roots",
] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync"] }
prost = "0.13.5"
prost-types = "0.13.5"
parking_lot = "0.12"
dashmap = "6.1.0"
rayon = "1.10"
ahash = "0.8"
lru = "0.13.0"
futures = "0.3"
once_cell = "1.19"
thiserror = "2.0.12"
task-macro = { path = "./task-macro" }
ctor = "0.4.1"
clap = { version = "4.5", features = ["derive"] }
tokio-rustls = "0.26.2"
rustls-pemfile = "2.1"

[build-dependencies]
tonic-build = { version = "0.13.0", features = ["transport", "prost"] }

[dev-dependencies]
tokio-test = "0.4"
portpicker = "0.1.1"

[workspace]
members = ["task-macro"]
