[workspace]
resolver = "2"
members = [
    "crates/task-common",
    "crates/task-manager",
    "crates/task-worker",
    "crates/task-operator",
    "crates/task-plugins",
    "crates/task-load-test",
    "crates/task-storage",
    "crates/task-scheduler",
    "crates/task-tests",
]

[workspace.package]
version = "0.2.0"
authors = ["Legacy Lands Team"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LegacyLands/legacy-lands-library"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full"] }
tokio-stream = { version = "0.1" }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.13"
prost-types = "0.13"

# gRPC
tonic = { version = "0.13", features = ["transport", "tls-native-roots", "tls-webpki-roots"] }
tonic-build = "0.13"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = "0.31"
opentelemetry = { version = "0.30", features = ["trace"] }
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }

# Kubernetes
kube = { version = "0.95", features = ["client", "runtime", "derive"] }
k8s-openapi = { version = "0.23", features = ["v1_31"] }
schemars = { version = "0.8", features = ["chrono"] }

# Message queue
async-nats = "0.42"

# Concurrency utilities
dashmap = "6.1"
parking_lot = "0.12"
lru = "0.14"
futures = "0.3"

# CLI and utilities
clap = { version = "4.5", features = ["derive", "env"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.2"

# Testing
mockall = "0.13"
proptest = "1.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
