[package]
name = "task-load-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "load-test"
path = "src/main.rs"

[build-dependencies]
tonic-build = "0.13"

[dependencies]
task-common = { path = "../task-common" }
task-manager = { path = "../task-manager" }

tokio = { version = "1.45", features = ["full"] }
tonic = "0.13"
prost = "0.13"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.17", features = ["v4", "serde"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
rand = "0.8"
hdrhistogram = "7.5"
axum = "0.8"
prost-types = "0.13"