[package]
name = "task-operator"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[[bin]]
name = "task-operator"
path = "src/main.rs"

[dependencies]
# Internal dependencies
task-common = { path = "../task-common" }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }

# Kubernetes
kube = { workspace = true, features = ["runtime", "derive"] }
k8s-openapi = { workspace = true }

# Message queue
async-nats = { workspace = true }

# CLI and configuration
clap = { workspace = true }
toml = "0.8"

# Utilities
chrono = { workspace = true }

# Metrics
prometheus = "0.13"
axum = "0.8"
