[package]
name = "task-plugins"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
task-common = { path = "../task-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }

# For dynamic loading
libloading = "0.8"
async-trait = "0.1"

# For WebAssembly support
wasmtime = "28.0"
wasmtime-wasi = "28.0"

# For K8s integration
kube = { workspace = true }
k8s-openapi = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tempfile = "3.8"
futures = { workspace = true }
tracing-subscriber = { workspace = true }

[[example]]
name = "wasm-task-example"
path = "../../examples/wasm-task-example.rs"