[package]
name = "task-scheduler"
version = "0.2.0"
edition = "2021"
authors = ["Legacy Lands <dev@legacylands.io>"]
description = "Advanced task scheduling strategies"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Data structures
priority-queue = "2.1"
indexmap = "2.6"

# Scheduling
cron = "0.13"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Other
uuid = { version = "1.11", features = ["v4", "serde"] }
parking_lot = "0.12"

# Internal dependencies
task-common = { path = "../task-common" }

[dev-dependencies]
tokio-test = "0.4"